=========
Changelog
=========

1.0.10 (unreleased)
===================

- Nothing changed yet.


1.0.9 (2016-01-03)
==================

- Work around broken crontab setuid installations by passing the
  new crontab via stdin.

- Fix accidental conversions for component attribute defaults: avoid
  conversions if we have overrides.

- Fix Debian supervisor's pid file attribute.

1.0.8 (2015-05-06)
==================

- Update built-in requests version to avoid certificate issues with
  newer Python 2.7.


1.0.7 (2015-05-04)
==================

- Improve Vagrant support: automatically install crontabs and automatically
  start services on boot.


1.0.6 (2015-04-01)
==================

- Add "dirty" flag to dependencies to express that it's OK to work with
  dirty data, e.g. to simply do a one-time retrieval, as long as we get
  _something_ back. Useful to peek onto static values like overrides or
  configuration when otherwise confronted with circular dependencies.


1.0.5 (2015-03-31)
==================

- Fix unicode accident: shells with ASCII only failed to run the
  supervisor cold deployment log message.


1.0.4 (2015-03-31)
==================

- A new event handling system that allows intercepting and responding
  to events from components. Currently supports "before-update".

- Supplement supervisor programs with 'deployment' mode parameter
  to support 'cold' deployments that shut down programs before
  any updates get deployed without causing superfluous cycles.


1.0.3 (2015-03-18)
==================

- Fix unicode encoding/decoding in File handling. See #14944.

- Remove remnant of better error output that got deferred to the 1.1
  branch that breaks reporting any conversion errors at all.

1.0.2 (2015-02-27)
==================

- Fix a bundle shipping issue: incorrect language settings caused us to
  incorrectly parse the list of heads on the remote side.


1.0.1 (2015-02-26)
==================

- Add virtualenv metadata for Python 2.4