@@ -1,9 +1,9 @@
 from batou.component import Component
-from batou.lib.download import Download
 from batou.lib.archive import Extract
-from batou import UpdateNeeded
+import batou
 import logging
 import os.path
+import sys
 
 
 logger = logging.getLogger(__name__)
@@ -84,7 +84,7 @@ class VirtualEnvPyBase(Component):
                 .format(pkg.package, pkg.version), silent=True)
         except RuntimeError, e:
             logger.debug(e[3])
-            raise UpdateNeeded()
+            raise batou.UpdateNeeded()
         # Is the package usable? Is the package a module?  This might be
         # overspecific - I'm looking for a way to deal with:
         # https://github.com/pypa/pip/issues/3 if a namespace package was not
@@ -97,7 +97,7 @@ class VirtualEnvPyBase(Component):
                          'import {0};{0}.__file__"'.format(pkg.package),
                          silent=True)
             except RuntimeError:
-                raise UpdateNeeded()
+                raise batou.UpdateNeeded()
 
     def update_pkg(self, pkg):
         if self.installer == 'pip':
@@ -207,6 +207,39 @@ class VirtualEnvPy3_4(VirtualEnvPyBase):
     install_options = ('--ignore-installed', '--egg')
 
 
+class PipDownload(Component):
+
+    namevar = 'package'
+    version = None
+    checksum = None
+    format = 'tar.gz'  # The format we expect pip to download
+
+    def configure(self):
+        self.target = self.expand(
+            '{{component.package}}-{{component.version}}.{{component.format}}')
+        self.checksum_function, self.checksum = self.checksum.split(':')
+        self.pip = os.path.join(os.path.dirname(sys.executable), 'pip')
+
+    def verify(self):
+        if not os.path.exists(self.target):
+            raise batou.UpdateNeeded()
+        if self.checksum != batou.utils.hash(self.target,
+                                             self.checksum_function):
+            raise batou.UpdateNeeded()
+
+    def update(self):
+        self.cmd(
+            '{{component.pip}} --isolated --disable-pip-version-check'
+            ' download'
+            ' --no-binary=:all: {{component.package}}=={{component.version}}'
+            ' --no-deps')
+        target_checksum = batou.utils.hash(self.target, self.checksum_function)
+        assert self.checksum == target_checksum, '''\
+Checksum mismatch!
+expected: %s
+got: %s''' % (self.checksum, target_checksum)
+
+
 class VirtualEnvDownload(Component):
     """Manage virtualenv package download and extraction.
 
@@ -216,18 +249,14 @@ class VirtualEnvDownload(Component):
     namevar = 'version'
     checksum = None
 
-    url = (
-        'http://pypi.gocept.com/packages/source/v/virtualenv/'
-        'virtualenv-{}.tar.gz')
-
     def configure(self):
         # This will manage central, version-specific virtualenv base
         # installations for multiple components to share.
         self.workdir = self.environment.workdir_base + '/.virtualenv'
-        download = Download(
-            self.url.format(self.version),
+        self += PipDownload(
+            'virtualenv', version=self.version,
             checksum=self.checksum)
-        self += download
+        download = self._
         self += Extract(download.target, target='.')
         extracted_dir = os.path.basename(download.target).rstrip('.tar.gz')
         self.venv_cmd = self.workdir + '/' + extracted_dir + '/virtualenv.py'
